# fastapi-nextjs-chain02

./: AGENTS.md  API_SPECIFICATION.md  AUTHENTICATION_FLOW.md  BACKEND_ARCHITECTURE.md  CLAUDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  FRONTEND_ARCHITECTURE.md  README.md  TESTING_STRATEGY.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
backend/app/core/: auth.py  permissions.py  security.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/database/models/: base.py
backend/app/middleware/: security.py  timeout.py  tracing.py
backend/app/schemas/: auth.py  permission.py  role.py  user.py
frontend/: .gitignore  middleware.ts  next.config.js  package.json  tailwind.config.js
frontend/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/(auth/)/: layout.tsx
frontend/app/(auth/)/forgot-password/: page.tsx
frontend/app/(auth/)/login/: page.tsx
frontend/app/(auth/)/register/: page.tsx
frontend/app/(dashboard/)/: layout.tsx
frontend/components/layout/: dashboard-nav.tsx  header.tsx
frontend/components/providers/: auth-provider.tsx
frontend/components/ui/: button.tsx  toast.tsx
frontend/hooks/: use-auth.ts  use-toast.ts
frontend/lib/api/: auth.ts  client.ts
frontend/lib/auth/: require-auth.ts
frontend/stores/: auth-store.ts
frontend/types/: user.ts
